--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
       class="main container d-flex justify-content-center align-items-center"
     >
       <div class="icons w-25">
-        <img src="/images/logo.svg" alt="" class="img-fluid" />
+        <img src="images/logo.svg" alt="" class="img-fluid" />
         <div class="mt-3">
           <img
-            src="/images/icon-document.svg"
+            src="images/icon-document.svg"
             alt=""
             class="img-fluid border-light-subtle p-2 rounded me-2"
           />
           <img
-            src="/images/icon-folder.svg"
+            src="images/icon-folder.svg"
             alt=""
             class="img-fluid border-light-subtle p-2 rounded me-2"
           />
           <img
-            src="/images/icon-upload.svg"
+            src="images/icon-upload.svg"
             alt=""
             class="img-fluid border-light-subtle p-2 rounded me-2"
           />
